sent first_webpage.html

--- a/practice/html/first_webpage.html
+++ b/practice/html/first_webpage.html
@@ -1,6 +1,29 @@
-<p>This is my first webpage.</p> 
 
-How are you doing?
-Hi my name is Daniel, whats your name?
-Where should we go for dinner today?
-Haha that was a funny joke!
+<!--The following is a note about the following.-->
+
+<h1>Heading 1</h1>
+<!--Example of a paragraph tag.-->
+<p>Subpoint1</p>
+<p>Subpoint 2</p>
+
+<h2>Heading 2</h2>
+<!--Example of a paragraph tag.-->
+<p>Subpoint 1</p>
+<p>Subpoint 2</p>
+
+<h3>Heading 3</h3>
+<!--Example of a paragraph tag.-->
+<p>Subpoint 1</p>
+<p>Subpoint 2</p>
+
+<!--HTML Character code examples-->
+<p>(add HTML code characters)</p>
+
+<!--Note: This is also part of the comment.-->
+
+<!--Unordered List-->
+<ul> 
+<li>Pizza</li>
+<li>Milk</li>
+<li>Sushi</li>
+</ul>
