new nytimes.html

--- a/nytimes.html
+++ b/nytimes.html
@@ -20,7 +20,7 @@
 
 <h1>Thank you for subscribing</h1>
 <p>You can also view our <a href="#">other newsletters</a> or visit your account to opt out or <a href="#">manage email preferences</a>.</p>
-<h1> An erroe has occured. Please try again later.</h1>
+<h1> An error has occured. Please try again later.</h1>
 <h1>You are already subscribed to this email.</h1>
 <a href="#">View all New York times newsletters.</a>
     </body>
