--- a/practice/html/standard.html
+++ b/practice/html/standard.html
@@ -8,7 +8,41 @@
 
     <title>My first Standards HTML File</title>
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0" />
+    <style>
+    
+/* Comment */
+/* CSS Syntax
+
+selector {
+    property_name: value;
+    property_name: value;
+    }
+    */
+
+    h1 {
+        font-size: 100px;
+        font-family: "Luminari","Ariel","Verdana", sans-serif;
+        text-align:center;
+        letter-spacing: 10px;
+        word spacing: 40px;
+    }
+
+    p {
+        font-size: 18px;
+        font-family: "Ariel", sans-serif;
+        color: goldenrod;
+    }
+
+    h2 {
+        font-size: 40x;
+        text-align: right;
+    }
+
+    
+
+
+
+    </style>
 
 </head>
 
@@ -24,7 +58,7 @@
 
     <ul>
         <li>Redwood Trees.</li>
-        <li></li>
+        <li>Oak Trees.</li>
     </ul>
 
     <a href="http://www.google.com"> Google's Search Engine</a>
