--- a/practice/html/layout.html
+++ b/practice/html/layout.html
@@ -19,7 +19,8 @@
      width: 500px;
      margin-right: auto;
      margin-left: auto;
-     }
+     padding-left: 50px;
+     padding-top: 10px}
 
    div {height: 100px;
    width:200px;
@@ -30,6 +31,7 @@
    margin-bottom:20px;
    margin: 100px 0 100px 0;
    }
+
 
      </style>
 
@@ -53,10 +55,11 @@
      <main>
           <!--Span element, used to make individual letters selectable.-->
           <h1>Daniel's <span style="font-size: 72px;">P</span>ortfolio</h1>
+     
+          <div></div>
      </main>
 
-     <div></div>
-
+     
      <footer>
           <p>Copyright & copy; 2019 Daniel Ibanez</p>
      </footer>
