--- a/practice/html/layout.html
+++ b/practice/html/layout.html
@@ -11,6 +11,57 @@
      <link rel="stylesheet" href="css/styles.css?v=1.0" />
 
      <style>
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* CUSTOM CSS*/
+
      body{background-color:lightseagreen;}
      header{background-color:red;}
      footer{ background-color:hotpink;}
@@ -25,13 +76,19 @@
    div {height: 100px;
    width:200px;
    background-color: blue;
-   margin-left:auto;
-   margin-right:auto;
-   margin-top:10px;
-   margin-bottom:20px;
-   margin: 100px 0 100px 0;
+   
+   margin:0;
+   position: absolute;
+   
+   bottom: 100px;
+   right: 100px;
    }
 
+   body {
+        font-size: 100px
+   }
+
+h1 {}
 
      </style>
 
