--- a/practice/html/layout.html
+++ b/practice/html/layout.html
@@ -71,24 +71,24 @@ table {
      margin-right: auto;
      margin-left: auto;
      padding-left: 50px;
-     padding-top: 10px}
+    }
 
    div {height: 100px;
    width:200px;
    background-color: blue;
    
    margin:0;
-   position: absolute;
+   position: fixed;
    
-   bottom: 100px;
-   right: 100px;
+   top: 500px;
+   left: 100px;
    }
 
-   body {
-        font-size: 100px
+   body {font-size: 100px
    }
 
-h1 {}
+h1 {font-size: 24px
+}
 
      </style>
 
