--- a/practice/css/grids.html
+++ b/practice/css/grids.html
@@ -14,6 +14,10 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-template-rows: 1fr 1fr 1fr;
 border: 1px solid red;
 grid-gap: 2px;
+grid-template-areas:
+"content content . sidebar"
+"content content . sidebar"
+".... footer footer footer";
         }
 
         #box1,#box2,#box3{
@@ -22,20 +26,17 @@ grid-gap: 2px;
         }
 
         #box1 {
-grid-row-start: 1;
-grid-row-end: 3;
+ grid-area: content;
+ grid-area 1/1/1/1;
         }
 
         #box2 {
-            grid-row-start: 2;
-            grid-row-end: 4;
+            grid-area: sidebar;
+            
         }
 
         #box3 {
-            grid-row-start: 3;
-            grid-row-end: 4;
-            grid-column-start: 4;
-            grid-column-end: 5;
+            grid-area: footer;
         }
     </style>
 </head>
