--- a/practice/css/external_1.html
+++ b/practice/css/external_1.html
@@ -6,9 +6,12 @@
 
     <meta charset="utf-8">
     <title>Externally Linked CSS Files</title>
-    <link rel="stylesheet" href="external_1.css" type="text/css" />
-    <link rel="stylesheet" href="reset.css"/>
 
+    <link rel="stylesheet" href="reset.css" type="text/css"/>
+    <link rel="stylesheet" href="external_1.css" type="text/css" />
+
+    
+    
 </head>
 
 <body id="firstpage">
@@ -18,7 +21,8 @@
             <h1>Welcome to this practice web page.</h1>
         </header>
         <main>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga autem temporibus, accusamus
+            <!--Inline CSS example-->
+            <p style="font-family: 'Helvetica', sans-serif; font-size: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga autem temporibus, accusamus
                 aliquam corporis voluptatem ex est rem iure? Maxime ut nam, iste ullam voluptas possimus quo incidunt
                 neque.</p>
                 <h1>This is after the long paragraph</h1>
