--- a/practice/css/external_2.html
+++ b/practice/css/external_2.html
@@ -6,9 +6,10 @@
 
     <meta charset="utf-8">
     <title>Externally Linked CSS Files</title>
-    <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="external_1.css" type="text/css" />
 
+    <link rel="stylesheet" href="reset.css" type="text/css"/>
+    <link rel="stylesheet" href="external_1.css" type="text/css" />
+    
 </head>
 
 <body id="secondpage">
