--- a/assignments/gallery/base.html
+++ b/assignments/gallery/base.html
@@ -21,8 +21,27 @@
                 <div></div>
                 <div></div>
             </div>
+
+            <div id="flexbox-gallery">
+                <div>
+                    <p></p>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+
+            <div id="grid-gallery">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+
+            
+
         </main>
         <footer></footer>
+
+       
 
     </div>
 
