--- a/assignments/gallery/base.html
+++ b/assignments/gallery/base.html
@@ -17,9 +17,9 @@
         <header></header>
         <main>
             <div id="main-gallery">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>Hello, how are you</div>
+                <div>Hello, how are you</div>
+                <div>Hello, how are you</div>
             </div>
 
             <div id="flexbox-gallery">
