--- a/assignments/gallery/base.html
+++ b/assignments/gallery/base.html
@@ -31,9 +31,9 @@
             </div>
 
             <div id="grid-gallery">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div><img src="images/birds.jpg" width="289" height="280"/></div>
+                <div><img src="images/birdssmall.jpg" width="289" height="280"/></div>
+                <div><img src="images/mountainssmall.jpg" width="289" height="280"/></div>
             </div>
 
             
