--- a/assignments/gallery/base.html
+++ b/assignments/gallery/base.html
@@ -15,6 +15,7 @@
     <div id="container">
 
         <header></header>
+
         <main>
             <div id="main-gallery">
                 <div>Hello, how are you</div>
@@ -31,17 +32,22 @@
             </div>
 
             <div id="grid-gallery">
-                <div><img src="images/birds.jpg" width="289" height="280"/></div>
-                <div><img src="images/birdssmall.jpg" width="289" height="280"/></div>
-                <div><img src="images/mountainssmall.jpg" width="289" height="280"/></div>
-            </div>
+                <div>
+                    <img src="images/blobsmall.jpg" width="289" height="280"/>
+                </div>
 
-            
+                <div>
+                        <a href="images/birds.jpg"><img src="images/birdssmall.jpg" width="289" height="280"/></a>
+                </div> 
+
+                <div>
+                    <img src="images/mountainssmall.jpg" width="289" height="280"/>
+                </div>
+
+            </div>
 
         </main>
         <footer></footer>
-
-       
 
     </div>
 
