--- a/practice/html/template1.html
+++ b/practice/html/template1.html
@@ -3,7 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>The HTML5 Herald</title>
+
+    <title>Project 2</title>
+    <link rel="stylesheet" href="styles/p2.css"
 </head>
 <body>
 </body>
