--- a/practice/css/fontawesome.html
+++ b/practice/css/fontawesome.html
@@ -93,11 +93,11 @@ i:hover{
     color: greenyellow
     }
 
-    #money i:hover {
+    #dollar i:hover {
     color: greenyellow
     }
 
-    #money i:link {
+    #dollar i:link {
     color: greenyellow
     }
 
@@ -128,20 +128,20 @@ background-color: hotpink}
         <ul>
                 <li>
                     
-                        <a href="#"><i class="fas fa-dollar-sign"></i></a>
+                        <a id="dollar" href="#"><i class="fas fa-dollar-sign"></i></a>
                   
                 </li>
                 <li>
-                        <a href="#"><i class="fas fa-ghost"></i></a>
+                        <a id="ghost" href="#"><i class="fas fa-ghost"></i></a>
                     </li> 
                     <li>
-                            <a href="#"><i class="fas fa-brain"></i></a>
+                            <a id="brain" href="#"><i class="fas fa-brain"></i></a>
                     </li>
                     <li>
-                            <a href="#"><i class="fas fa-dizzy"></i></a>
+                            <a id="dead" href="#"><i class="fas fa-dizzy"></i></a>
                     </li>
                     <li>
-                            <a href="#"><i class="fas fa-chess-king"></i></a>
+                            <a id="king" href="#"><i class="fas fa-chess-king"></i></a>
                 </li>
                 </ul>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed cum cupiditate beatae est soluta veniam dolore natus nesciunt. Magnam quibusdam laboriosam iusto aliquam officiis dolore asperiores nemo dolores quo pariatur?</p>
