--- a/Projects/project2/p2.html
+++ b/Projects/project2/p2.html
@@ -15,7 +15,8 @@
 
         <div id="back">
         <header>
-<div id="head"></div>
+<div id="head"><p><b>Daniel Ibanez</b></p></div>
+<div id="stars"><img src="images/stars.jpg"></div>
 
             </header>
 
