--- a/Projects/project2/p2.html
+++ b/Projects/project2/p2.html
@@ -8,37 +8,37 @@
     <link rel="stylesheet" href="styles/p2.css">
 </head>
 
-
-
-
 <body>
 
         <div id="back">
-        <header>
-<div id="head"><p><b>Daniel Ibanez</b></p></div>
-<div id="stars"><img src="images/stars.jpg"></div>
+            <header>
+
+                <div id="stars">
+                    <img src="images/stars.jpg">
+                 <div class = "centered">centered</div>
+                </div>
 
             </header>
 
             <main>
-<div id= "main"><div> <img src="images/connections.jpg"></div></div>
-<div> <img src="images/networking.jpg"></div>
-<div> <img src="images/phone.jpg"></div>
-<div> <img src="images/worldwide.jpg"></div>
-<nav>
-        <ul>
-             <b>Home</b>
-             <a href="about.html">About Me</a>
-             <a href="projects.html">Projects</a>
-             <a href="contact.html">Contact Me</a>
-             <a href="resume.pdf">My Resume</a>
-        </ul>
-   </nav>
+                        <div id= "main"><div> <img src="images/connections.jpg"></div></div>
+                        <div> <img src="images/networking.jpg"></div>
+                        <div> <img src="images/phone.jpg"></div>
+                        <div> <img src="images/worldwide.jpg"></div>
+                        <nav>
+                                <ul>
+                                    <b>Home</b>
+                                    <a href="about.html">About Me</a>
+                                    <a href="projects.html">Projects</a>
+                                    <a href="contact.html">Contact Me</a>
+                                    <a href="resume.pdf">My Resume</a>
+                                </ul>
+                        </nav>
             </main>
 
             <footer>
-<div id ="foot"></div>
-                </footer>
+                        <div id ="foot"></div>
+            </footer>
             </div>
 </body>
 
