--- a/Projects/project2/p2.html
+++ b/Projects/project2/p2.html
@@ -13,9 +13,9 @@
         <div id="back">
             <header>
 
-                <div id="stars">
-                    <img src="images/stars.jpg">
-                 <div class = "centered">centered</div>
+                <div id="container">
+                    <img src="images/stars2.jpg" style="width: 100%; height:300px";>
+                <div id="htext">Daniel Ibanez</div>
                 </div>
 
             </header>
@@ -25,15 +25,15 @@
                         <div> <img src="images/networking.jpg"></div>
                         <div> <img src="images/phone.jpg"></div>
                         <div> <img src="images/worldwide.jpg"></div>
-                        <nav>
-                                <ul>
+                        <div>
+                                <div>
                                     <b>Home</b>
-                                    <a href="about.html">About Me</a>
+                                    <a href="about.html" >About Me</a>
                                     <a href="projects.html">Projects</a>
                                     <a href="contact.html">Contact Me</a>
                                     <a href="resume.pdf">My Resume</a>
-                                </ul>
-                        </nav>
+                                </div>
+                            </div>
             </main>
 
             <footer>
