--- a/Projects/project2/projects.html
+++ b/Projects/project2/projects.html
@@ -7,8 +7,61 @@
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="sitepoint">
 <link rel="stylesheet" href="css/styles.css?v=1.0"/>
+
+<style>
+h1{
+    text-align: center;
+    font-family:"Arial", sans-serif;
+    font: size 72px;
+    color:darkgrey;
+}
+
+#project1{
+    width:700px;
+    height:300px;
+    background-color: lightgrey;
+    margin: 0 auto;
+}
+
+#project1 h2{
+    font-size: 34px;
+    text-transform:capitalize;
+    font-family: "Ariel", sans-serif;
+    margin: 10px 0 0 10px;
+}
+
+#project1 img{
+    margin: 20px;
+    border: yellow 5px dashed;
+}
+
+#project1 p{
+    float:right;
+    
+}
+</style>
+
+
+
+
+
+
 </head>
 <body>
+<header>
+    <h1>Web Projects</h1>
+</header>
+
+<main>
+<div id="project1">
+<h2>The Hobby Project</h2>
+<img src="#"
+</div>
+    </main>
+
+    <footer>
+
+    </footer>
         <ul>
                 <li>
                <a href="index.html">Home</a>
