--- a/Projects/project2/p2.html
+++ b/Projects/project2/p2.html
@@ -42,25 +42,25 @@
                             <img src="images/lasers.jpg" style="width:30%; border:7.5px ;
                             border-color:black ;
                             border-style: solid; 
-                            position:absolute; top: 90px;left: 23px">
+                            position:relative; top: 90px;left: 23px">
                             </div>
                         <div> 
                             <img src="images/connections3.jpg" style="width:30%; border:7.5px ;
                             border-color:black ;
                             border-style: solid;
-                            position:absolute;top: 180px; left: 895px;">
+                            position:relative;top: 180px; left: 895px;">
                             </div>
                         <div> 
                             <img src="images/worldwide.jpg" style="width:35%; border:7.5px ;
                             border-color:black ;
                             border-style: solid; 
-                            position:absolute;top: 250px;left: 23px;">
+                            position:relative;top: 250px;left: 23px;">
                             </div>
                     <div> 
                         <img src="images/touched3.jpg" style="width:30%;border:7.5px ;
                         border-color:black ;
                         border-style: solid;
-                        position:absolute; top:330px; left: 895px;">
+                        position:relative; top:330px; left: 895px;">
                         </div>
 
                 
